--- a/wp-content/themes/brooklyncello/resources/assets/styles/07_pages/_about.scss
+++ b/wp-content/themes/brooklyncello/resources/assets/styles/07_pages/_about.scss
@@ -17,15 +17,11 @@
 }
 
 .about__preface {
-  margin-bottom: em(35, $font-size-base);
+  margin-bottom: em(38, $font-size-base);
   line-height: em(30, $font-size-base);
   font-weight: bold;
   text-align: center;
   border-bottom: em(1, $font-size-base) solid c(black);
-
-  @include min-width($_tablet-960px-breakpoint) {
-    margin-bottom: em(55, $font-size-base);
-  }
 
   @include min-width($_mobile-640px-breakpoint) {
     padding-left: em(40, $font-size-base);
@@ -33,6 +29,7 @@
   }
 
   @include min-width($_tablet-960px-breakpoint) {
+    margin-bottom: em(48, $font-size-base);
     padding-left: em(60, $font-size-base);
     padding-right: em(60, $font-size-base);
   }
@@ -46,6 +43,18 @@
 
     @include min-width($_tablet-960px-breakpoint) {
       margin-bottom: em(40, $font-size-base);
+    }
+  }
+}
+
+.about__content {
+  @include container((width: 1280px));
+
+  .content-block:last-child {
+    padding-bottom: em(50);
+
+    @include min-width($_laptop-1280px-breakpoint) {
+      padding-bottom: em(25);
     }
   }
 }
